[Deepak] text alignment fix

--- a/design/style/index.scss
+++ b/design/style/index.scss
@@ -7,7 +7,9 @@ p {
 }
 
 .content {
+  text-align: justify;
   color: #666666;
+  padding: 0 50px;
   span {
     font-weight: 600;
     color: #444444;
